<resources>
    <string name="app_name">E-Invoice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ru_lan">Русский</string>
    <string name="uz_lan">O\'zbekcha</string>
    <string name="uzc_lan">Ўзбекча</string>
    <string name="password">Пароль</string>
    <string name="login_text">Тизимга кириш</string>
    <string name="no_internet">Интернет билан алоқа мавжуд эмас ёки яхши эмас</string>
    <string name="server_error">Сервер билан алоқа мавжуд эмас</string>
    <string name="login_text_info">"Давом этиш" тугмасини босиш орқали сиз Фойдаланувчи шартномаси шартларини қабул қиласиз</string>
    <string name="loading_text">Бажарилмоқда </string>
    <string name="cancel">Бекор қилиш</string>
    <string name="repeat">Қайта уруниш</string>
    <string name="filter">Қидирув</string>
    <string name="settings">Созламалар</string>
    <string name="slow_internet">Интернет жуда секин</string>
    <string name="no_connect_internet">Интернет билан уланиш мавжуд емас</string>
    <string name="act">Акт</string>
    <string name="act_number">Номер акта</string>
    <string name="act_date">Дата акта</string>
    <string name="seller">Ижрочи</string>
    <string name="seller_tin">ИНН поставщика</string>
    <string name="name_1">Название</string>
    <string name="branches">Филиалы</string>
    <string name="no_data">Малумот мавжуд эмас</string>
    <string name="contract">Шартнома</string>
    <string name="contract_number">Шартнома рақами</string>
    <string name="contract_date">Шартнома санаси</string>
    <string name="buyer_1">Мижоз</string>
    <string name="tin_or_pinfl">ИНН/ПИНФЛ</string>
    <string name="description">Тавсиф</string>
    <string name="products">Маҳсулотлар</string>
    <string name="count">Миқдори</string>
    <string name="save">Сақлаш</string>
    <string name="search">Қидирув...</string>
    <string name="branch_name">Филиал номи</string>
    <string name="address">Манзил</string>
    <!--    Act Description-->
    <string name="act_description1">Биз, қуйида имзо чекувчилар,</string>
    <string name="act_description2">бундан кейин Пудратчи деб юритилади, бир томондан, ва</string>
    <string name="act_description3">бундан кейин Буюртмачи деб юритилади, бошқа томондан, иш Буюртмачининг шартларига мувофиқ тўлиқ бажарилганлиги тўғрисида ушбу Сертификатни туздилар.</string>
    <string name="ikpu_and_name">ИКПУ ва товарлар номи (хизматлар иши)</string>
    <string name="product_note">Товарларга (ишларга, хизматларга) эслатма</string>
    <string name="unit_of_measurement">Ўлчов бирлиги</string>
    <string name="cost">Нархи</string>
    <string name="total_cost_of_work">Ишнинг умумий қиймати:</string>
    <string name="add_product">Продуст қўшиш</string>
    <!--    Act product-->
    <string name="no_act_product_name">Товарларга (ишларга, хизматларга) эслатма мавжуд эмас</string>
    <string name="no_act_product_count">Товар сони мавжуд эмас</string>
    <string name="no_act_product_summa">Сумма мавжуд эмас</string>
    <string name="no_act_product_total_summa">Умумий Сумма мавжуд эмас</string>
    <string name="success_add_product">Продуст сақланди</string>
    <string name="update">Ўзгартиш</string>
    <string name="success_update_product">Продуст ўзгартирилди</string>
    <string name="choose">Танлаш</string>
    <string name="no_act_number">Акт рақами мавжуд эмас</string>
    <string name="no_act_data">Акт санаси мавжуд эмас</string>
    <string name="no_act_description">Акт тавсифи мавжуд эмас</string>
    <string name="no_contract_number">Шартнома рақами мавжуд эмас</string>
    <string name="no_contract_date">Шартнома санаси мавжуд эмас</string>
    <string name="no_buyer_name">Харидор номи мавжуд эмас</string>
    <string name="no_buyer_tin_or_pinfl">Харидор СТИР/ПИФЛ мавжуд эмас</string>
    <string name="date_picker">Санани танланг</string>
    <string name="send">Юбориш</string>
    <string name="delete">Ўчириш</string>
    <string name="copy">Кўчириш</string>
    <string name="update_status">Статусни янгилаш</string>
    <string name="view">Кўриниш</string>
    <string name="from">даги</string>
    <string name="act_table_two_text">Товарларнинг (хизматларнинг) ягона электрон миллий каталогига мувофиқ идентификация коди ва номи</string>
    <string name="name_works">Ишлар ва хизматлар номи</string>
    <string name="measure_table">Ўлчов бирлиги</string>
    <string name="count_table">Сони</string>
    <string name="summa_product_table">Нархи</string>
    <string name="summa_total_table">Умумий сумма</string>
    <string name="text_act">ТУГАРИЛГАН ИШЛАРНИ ҚАБУЛ ҚИЛИШ АКТИ (кўрсатилган хизматлар)</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="total">Жами:</string>
    <string name="no_cure">Томонларнинг бир-бирига қарши даъволари йўқ.</string>
    <string name="act_summa">Акт бўйича қабул қилинган ишнинг қиймати:</string>
    <string name="executor">Ижрочи</string>
    <string name="customer">Мижоз</string>
    <string name="signing">Имзолаш</string>
    <string name="created">Яратилган</string>
    <string name="inn">INN</string>
    <string name="money_type">сўм</string>
    <string name="retry">Қайта уруниш</string>
    <string name="partner_signature">шерикнинг имзосини кутинг</string>
    <string name="cancelled_by_send">жўнатувчи томонидан бекор қилинган</string>
    <string name="rejected_by_partner">шерик томонидан рад этилган</string>
    <string name="accepted_by_partner">ҳамкор томонидан қабул қилинади</string>
    <string name="process_of_sending">юбориш жараёнида</string>
    <string name="error_while_settings">юбориш пайтида хато</string>

    <string name="number">Рақам</string>
    <string name="from_date">Санасидан Бошлаб</string>
    <string name="date_by">Сана томонидан</string>
    <string name="status">Статус</string>
    <string name="other">Бошқа</string>
    <string name="counterparty">Контрагентнинг СТИР бўйича</string>
    <string name="subdivisions">Бўлимлар</string>

    <string name="all_status">Ҳаммаси</string>
    <string name="confirmed_status">Тасдиқланган</string>
    <string name="denied_status">Рад этилган</string>
    <string name="signature_status">Имзо кутилмоқда</string>
    <string name="send_status">Юборилди</string>
    <string name="search_doc">Қидирув</string>
    <string name="create_screen">Сиз яратиш ойнасидан ўтдингиз</string>
    <string name="delete_text">Ўчиришни хохлайсизми?</string>
    <string name="no_eimzo">Сизда Э-Имзо иловаси мавжуд эмас</string>
    <string name="check_sign">Документ мувофақиятли имзоланди</string>
    <string name="copy_doc_id">Документ ид си копй қилинди</string>
    <string name="checked">Тасдиқланг</string>
    <string name="install_e_signed">Ўрнатиш</string>
    <string name="checked_text">Танлаш</string>
    <string name="added">Қўшиш</string>
    <string name="close">Ёпиш</string>
    <string name="mxic">МХИК:</string>
    <string name="check_type">Ҳақиқатан ҳам бу ҳаракатни такрорлашни хоҳлайсизми?</string>
    <string name="accept">Қабул қилиш</string>

</resources>