<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.docDataScreen.DocumentInfoFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/include_act_create_doc"
        layout="@layout/act_document"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_view_act"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:menu_colorNormal="@color/primary_color"
        app:menu_fab_size="normal"
        app:menu_shadowColor="@color/secondary_color"
        app:layout_constraintRight_toRightOf="parent"
        app:menu_colorRipple="@color/secondary_color"
        app:menu_colorPressed="@color/secondary_color"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/send"
            app:fab_size="mini"
             app:fab_colorNormal="@color/white"
            app:rippleColor="@color/send_color"
            android:layout_width="@dimen/_30sdp"
            app:fab_progress_color="@color/send_color"
            app:fab_colorRipple="@color/send_color"
            app:fab_shadowColor="#5C42AE46"
            app:fab_colorPressed="#AD42AE46"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_send"
            android:tintMode="src_in"
            app:fabSize="mini"
            app:fab_label="@string/send"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/edit"
            app:fab_colorNormal="@color/white"
            app:rippleColor="@color/edit_color"
            android:layout_width="@dimen/_30sdp"
            app:fab_progress_color="@color/edit_color"
            app:fab_colorRipple="@color/edit_color"
            app:fab_shadowColor="#6B009688"
            app:fab_colorPressed="#B0009688"
            app:fab_size="mini"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_baseline_edit_24"
            app:fabSize="mini"
            app:fab_label="@string/update"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/delete"
            app:rippleColor="@color/delete_color"
            app:fab_colorNormal="@color/white"
            app:fab_progress_color="@color/delete_color"
            app:fab_colorRipple="@color/delete_color"
            app:fab_colorPressed="#AEFF0000"
            app:fab_shadowColor="#6BFF0000"
            app:fab_size="mini"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_delete"
            app:fabSize="mini"
            app:fab_label="@string/delete"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/copy"
            app:fab_colorNormal="@color/white"
            app:fab_progress_color="@color/copy_color"
            app:fab_colorRipple="@color/copy_color"
            app:fab_colorPressed="#BAFF5722"
            app:fab_shadowColor="#72FF5722"
            app:rippleColor="@color/copy_color"
            app:fab_size="mini"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_baseline_content_copy_24"
            app:fabSize="mini"
            app:fab_label="@string/copy"/>
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/edit_status"
            app:fab_colorNormal="@color/white"
            app:rippleColor="@color/update_status"

            app:fab_progress_color="@color/update_status"
            app:fab_colorRipple="@color/update_status"
            app:fab_colorPressed="#B78BC34A"
            app:fab_shadowColor="#5EFF5722"
            android:layout_width="@dimen/_30sdp"
            app:fab_size="mini"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_dit_1"
            app:fabSize="mini"
            app:fab_label="@string/update_status"/>
    </com.github.clans.fab.FloatingActionMenu>
</androidx.constraintlayout.widget.ConstraintLayout>