<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.authScreen.AuthFragment">
   <androidx.appcompat.widget.LinearLayoutCompat
       android:orientation="vertical"
       android:gravity="center|top"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <ImageView
           android:layout_marginTop="@dimen/_30sdp"
           android:id="@+id/image"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintVertical_bias="0.05"
           android:scaleType="centerCrop"
           app:layout_constraintRight_toRightOf="parent"
           android:src="@drawable/e_invoice_icon"
           android:layout_width="@dimen/_70sdp"
           android:layout_height="@dimen/_40sdp"/>
       <View
           android:layout_marginTop="@dimen/_5sdp"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_30sdp"/>
       <uz.einvoice.android.utils.mask.MaskedEditText
           android:id="@+id/phone_number"
           android:textSize="@dimen/_12sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="normal"
           android:textColor="@color/text_color"
           android:gravity="center|start"
           android:fontFamily="@font/inter_medium"
           android:paddingHorizontal="@dimen/_6sdp"
           android:typeface="normal"
           app:allowed_chars="0123456789"
           android:hint="0000000000000000"
           app:mask="+998 ## ### ## ##"
           android:inputType="phone"
           android:background="@drawable/auth_input_back"
           android:layout_marginHorizontal="@dimen/_20sdp"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_33sdp"/>
       <EditText
           android:id="@+id/password"
           android:layout_marginTop="@dimen/_15sdp"
           android:hint="@string/password"
           android:paddingHorizontal="@dimen/_6sdp"
           android:layout_marginHorizontal="@dimen/_20sdp"
           android:background="@drawable/auth_input_back"
           android:inputType="textPassword"
           android:textSize="@dimen/_12sdp"
           android:textColor="@color/text_color"
           android:textStyle="normal"
           android:fontFamily="@font/inter_medium"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_33sdp"/>
       <View
           android:layout_weight="1"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
       <TextView
           android:id="@+id/title_message"
           android:layout_marginHorizontal="@dimen/_20sdp"
           android:textSize="@dimen/_10sdp"
           android:textColor="@color/text_color_gray"
           android:textStyle="normal"
           android:fontFamily="@font/inter_medium"
           android:text="@string/login_text_info"
           android:gravity="center"
           android:layout_marginTop="@dimen/_10sdp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/login_btn"
           android:layout_marginBottom="@dimen/_10sdp"
           android:background="@drawable/button_bac"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="normal"
           android:textColor="@color/white"
           android:textSize="@dimen/_12sdp"
           android:textAllCaps="false"
           android:fontFamily="@font/inter_medium"
           android:gravity="center"
           android:text="@string/login_text"
           android:layout_marginHorizontal="@dimen/_20sdp"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_33sdp"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>