<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/_40sdp">
        <TextView
            android:id="@+id/toolbar_title"
            android:textStyle="normal"
            android:gravity="center"
            android:fontFamily="@font/inter_medium"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/text_color"
            android:text="Product qo'shish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.core.widget.NestedScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- catalogcode   spinner-->
            <LinearLayout
                android:id="@+id/layout_catalogcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/ikpu_and_name"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/_8sdp" />

                <TextView
                    android:id="@+id/list_catalog_code"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_components_back"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:drawableEnd="@drawable/ic_arrow_bottom"
                    android:textSize="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:textColor="@color/text_color"
                    tools:text="Выберите товар"/>
            </LinearLayout>
            <!-- name-->
            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/product_note"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/_8sdp" />
                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/create_edit_text_background"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_gray"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <!-- measureid=spinner && count=count -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp">
                <!-- measureid  spinner-->
                <LinearLayout
                    android:id="@+id/layout_measureid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/unit_of_measurement"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/_8sdp" />
                    <TextView
                        android:id="@+id/list_measureid"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_components_back"
                        android:drawableEnd="@drawable/ic_arrow_bottom"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp"
                        android:textColor="@color/text_color" />
                </LinearLayout>
                <!--count-->
                <LinearLayout
                    android:id="@+id/layout_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/count"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/_8sdp" />
                    <EditText
                        android:id="@+id/edit_count"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/create_edit_text_background"
                        android:fontFamily="@font/inter_regular"
                        android:hint="2..."
                        android:inputType="number"
                       android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>

            <!-- summa-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/cost"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/_8sdp" />
                <EditText
                    android:id="@+id/edit_summa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/create_edit_text_background"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_gray"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <!-- totalsum-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/total_cost_of_work"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/_8sdp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_totalsum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_components_back"
                        android:enabled="false"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/inter_regular"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:textSize="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/button_bac"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/btn_save_product"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_10sdp"
                android:background="@drawable/button_bac"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>